.gitignore adds aspell

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ sources_non_forked/tlib/doc/tags
 my_configs.vim
 tags
 .DS_Store
+sources_non_forked/ack.vim/spell/en.utf-8.add
+sources_non_forked/ack.vim/spell/en.utf-8.add.spl
