--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,6 @@
 [submodule "vim-better-whitespace"]
 	path = sources_non_forked/vim-better-whitespace
 	url = https://github.com/ntpeters/vim-better-whitespace.git
+[submodule "sources_non_forked/ctags"]
+	path = sources_non_forked/ctags
+	url = git@github.com:universal-ctags/ctags.git
