--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,6 @@
 [submodule "sources_non_forked/YouCompleteMe"]
 	path = sources_non_forked/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule "sources_non_forked/FastFold"]
+	path = sources_non_forked/FastFold
+	url = https://github.com/Konfekt/FastFold.git
