--- a/.gitmodules
+++ b/.gitmodules
@@ -67,7 +67,8 @@
 	url = git@github.com:mkitt/tabline.vim.git
 [submodule "SimpylFold"]
 	path = sources_non_forked/SimpylFold
-	url = git@github.com:tmhedberg/SimpylFold.git
+    url = git@github.com:tmhedberg/SimpylFold.git
+    ignore = dirty
 [submodule "vim-better-whitespace"]
 	path = sources_non_forked/vim-better-whitespace
 	url = https://github.com/ntpeters/vim-better-whitespace.git
